so en dreck die fuckass applikation lauft endlich die scheisse