@@ -9,11 +9,19 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.crypto.factory.PasswordEncoderFactories;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import ch.bbw.m183.vulnerapp.security.JsonUsernamePasswordAuthenticationFilter;
+import jakarta.servlet.http.HttpServletResponse;
 
 import java.util.List;
+import java.util.Collections;
 
 @Configuration
 public class SecurityConfiguration {
@@ -21,11 +29,14 @@ public class SecurityConfiguration {
     public UserDetailsService userDetailsService(UserRepository userRepository) {
         return username -> userRepository
                 .findById(username)
-                .map(entity -> new User(
-                        entity.getUsername(),
-                        entity.getPassword(),
-                        List.of()
-                ))
+                .map(entity -> {
+                    var authorities = Collections.singletonList(new SimpleGrantedAuthority(entity.getRole()));
+                    return new User(
+                            entity.getUsername(),
+                            entity.getPassword(),
+                            authorities
+                    );
+                })
                 .orElseThrow(() -> new UsernameNotFoundException("sorry no user with this name"));
     }
 
@@ -36,15 +47,40 @@ public class SecurityConfiguration {
 
     @Bean
     public SecurityFilterChain filterChain(
-            HttpSecurity http, RestfulFormService restfulFormService) {
-        return http.formLogin(restfulFormService.restfulFormLogin())
+            HttpSecurity http, RestfulFormService restfulFormService, tools.jackson.databind.ObjectMapper objectMapper) {
+
+        AuthenticationManager authManager = http.getSharedObject(AuthenticationManager.class);
+
+        JsonUsernamePasswordAuthenticationFilter jsonFilter = new JsonUsernamePasswordAuthenticationFilter(objectMapper);
+        jsonFilter.setAuthenticationManager(authManager);
+        jsonFilter.setFilterProcessesUrl("/api/login");
+
+        return http
+                .addFilterAt(jsonFilter, UsernamePasswordAuthenticationFilter.class)
+                .formLogin(restfulFormService.restfulFormLogin())
+                .logout(logout -> logout
+                        .logoutUrl("/api/logout")
+                        .invalidateHttpSession(true)
+                        .deleteCookies("JSESSIONID")
+                        .logoutSuccessHandler((req, res, auth) -> {
+                            res.setStatus(HttpServletResponse.SC_OK);
+                            res.setContentType("application/json");
+                            res.getWriter().write("{}");
+                        })
+                )
                 .exceptionHandling(restfulFormService.unauthorizedPerDefault())
-                .csrf(x -> x.disable())
+                .csrf(csrf -> csrf
+                        .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
+                        .ignoringRequestMatchers("/api/csrf", "/api/auth/register", "/api/auth/validate-password"))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
                 .authorizeHttpRequests(auth ->
-                        auth.requestMatchers("/api/**")
-                                .authenticated()
-                                .anyRequest()
-                                .permitAll())
+                        auth.requestMatchers("/api/csrf").permitAll()
+                                .requestMatchers("/api/auth/register").permitAll()
+                                .requestMatchers("/api/auth/validate-password").permitAll()
+                                .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                                .requestMatchers("/api/blog/**").permitAll()
+                                .requestMatchers("/api/**").authenticated()
+                                .anyRequest().permitAll())
                 .build();
     }
 
